adeed photos and stuff, but they are copyrighted so shared through google drive instead of on github (specifically the folders tinyarchive/media/sounds and tinyarchive/media/photographs are needed to make the site fully work)

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Copyrighted stuff
+record_information/Patti\ Smith - Horses/*
+record_information/The\ Doors\ -\ Greatest\ Hits/*
+record_information/Derek\ &\ The\ Dominos\ -\ Layla\ and\ Other\ Assorted\ Love\ Songs/*
+record_information/Santana\ -\ Moon\ Flower/*
+record_information/The\ Beatles\ (White Album)\ -\ The Beatles/*
+tinyarchive/media/sounds/*
+tinyarchive/media/photographs/*
